set partials director and added header

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -7,15 +7,11 @@
       src='https://kit.fontawesome.com/762d37fbf3.js'
       crossorigin='anonymous'
     ></script>
-    {{!-- <script src='scripts/index.js' defer></script> --}}
+    {{! <script src='scripts/index.js' defer></script> }}
     <title>Chore Board</title>
   </head>
   <body>
-    <div id='app'>
-      {{body}}
-      <div id='dropdowns'></div>
-      <div id='chores' class='chores'></div>
-    </div>
+    {{{body}}}
   </body>
   <template id='error-template'>
     <div class='error'></div>
