added index.js file

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -7,7 +7,7 @@
       src='https://kit.fontawesome.com/762d37fbf3.js'
       crossorigin='anonymous'
     ></script>
-    {{! <script src='scripts/index.js' defer></script> }}
+    <script src='index.js' defer></script>
     <title>Chore Board</title>
   </head>
   <body>
